@@ -1,3 +1,6 @@
+/*
+ * $Id: filterit.c,v 1.2 2023-10-01 01:21:34+05:30 Cprogrammer Exp mbhangui $
+ */
 #include <strerr.h>
 #include "filterit.h"
 
@@ -6,3 +9,10 @@ main(int argc, char **argv)
 {
 	return (filterit_sub1(argc, argv));
 }
+
+/*
+ * $Log: filterit.c,v $
+ * Revision 1.2  2023-10-01 01:21:34+05:30  Cprogrammer
+ * added RCS log
+ *
+ */
