@@ -51,6 +51,8 @@ Release @version@-@release@ Start 11/09/2023 End --/--/----
 - 30/09/2023
 41. svctool: added --chksender option to enable CHECKSENDER
 42. qmail-lspawn.c: skip setuser_privileges for non-etc-passwd users
+- 01/10/2023
+43. autoresponder.c: decode SRS return path address
 
 * Fri Sep 08 2023 11:58:03 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.4-1.1%{?dist}
 Release 3.0.4-1.1 Start 24/04/2023 End 08/09/2023
